--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div class="container">
-      <div id="blank-form">
+      <div id="blankform">
         <h2>Please supply us with your name and address:</h2>
         <form class="">
           <label for="first-name">First Name</label>
@@ -22,10 +22,10 @@
           <input id="city" class="form-control" type="text">
           <h5>State</h5>
           <select class="form-control" id="state">
-            <option value="1">Oregon</option>
-            <option value="2">Washington</option>
-            <option value="3">Califoria</option>
-            <option value="4">Idaho</option>
+            <option>Oregon</option>
+            <option>Washington</option>
+            <option>Califoria</option>
+            <option>Idaho</option>
           </select>
           <label for="zip-code">Zipcode</label>
           <input id="zip-code" class="form-control" type="text">
@@ -33,18 +33,16 @@
           <button type="submit" class="btn">SUBMIT OR DIE!</button>
         </form>
       </div><!--end blank form-->
-      <div class="receipt">
-        <p>
-          Thank you <span class="first-name"></span> <span class="last-name"></span>!
-          We know you'll enjoy your new delux hamster cage.
+      <div class="col-md-4 receipt">
+        <h4>
+          Thank you <span class="first-name"></span> <span class="last-name"></span>!</h4>
+          <p>We know you'll enjoy your new delux hamster cage.
           Expect shipment in 2 to 5 months to:
         </p>
         <ul class="receipt-add">
-          <li class ="first-name last-name"></li>
-          <li class="street address"></li>
-          <li class="city"></li>
-          <li class="state"></li>
-          <li class="zip-code"></li>
+          <li><span class ="first-name"> </span> <span class="last-name"> </span> </li>
+          <li class="street-add"></li>
+          <li><span class="city"></span> <span class="state" ></span> <span class="zip-code"> </span> </li>
         </ul>
         <p>
           Please be informed that we have a 2 day return policy.
